--- a/package.json
+++ b/package.json
@@ -4,21 +4,24 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test:ui": "npx playwright test",
-    "test": "npx playwright test",
     "test:ui:regression": "npx playwright test --project=sales-portal-ui --grep @regression|@smoke",
     "test:ui:smoke": "npm run test -- --project=sales-portal-ui --grep @smoke",
     "ui-mode": "npx playwright test --ui",
     "html-report-open": "npx playwright show-report",
     "allure-report": "allure generate allure-results -o allure-report --clean",
     "allure-report-open": "npm run allure-report && allure open allure-report",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
     "prettier": "prettier --config .prettierrc src/**/*.ts --check src/",
     "prettier:fix": "prettier --config .prettierrc src/**/*.ts --write src/",
-    "format": " npm run prettier && npm run lint",
     "format:fix": "npm run prettier:fix && npm run lint:fix",
-    "prepare": "husky"
+    "prepare": "husky install",
+    "lint": "eslint . --ext .ts,.tsx,.js,.jsx",
+    "lint:fix": "eslint . --ext .ts,.tsx,.js,.jsx --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "lint-staged": "lint-staged",
+    "precommit": "npm run lint-staged",
+    "test": "npx playwright test",
+    "test:ui": "npx playwright test --ui"
   },
   "keywords": [],
   "author": "",
@@ -37,13 +40,19 @@
     "@types/moment": "^2.13.0",
     "@types/node": "^24.6.2",
     "allure-playwright": "^3.4.2",
-    "eslint": "^9.36.0",
+    "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-jest": "^29.2.1",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-playwright": "^2.4.0",
     "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "globals": "^16.4.0",
     "husky": "^9.1.7",
     "jest": "^30.2.0",
-    "prettier": "^3.6.2",
+    "lint-staged": "^16.2.7",
+    "prettier": "^3.7.3",
     "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
@@ -54,7 +63,6 @@
     "ajv": "^8.17.1",
     "bson": "^7.0.0",
     "dotenv": "^17.2.3",
-    "lint-staged": "^16.2.3",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "mongodb": "^7.0.0",
@@ -62,7 +70,8 @@
   },
   "lint-staged": {
     "src/**/*.{ts,tsx,js,jsx}": [
-      "eslint --fix"
+      "eslint --fix",
+      "prettier --write"
     ],
     "src/**/*.{ts,tsx,js,jsx,json,md,yml,yaml,css,scss}": [
       "prettier --write"
