--- a/package.json
+++ b/package.json
@@ -69,12 +69,8 @@
     "numeral": "^2.0.6"
   },
   "lint-staged": {
-    "src/**/*.{ts,tsx,js,jsx}": [
-      "eslint --fix",
-      "prettier --write"
-    ],
-    "src/**/*.{ts,tsx,js,jsx,json,md,yml,yaml,css,scss}": [
-      "prettier --write"
-    ]
+    "*.{js,ts,jsx,tsx}": ["eslint --fix", "prettier --write"],
+    "*.json": ["prettier --parser json --write"],
+    "*.{md,yml,yaml,css,scss}": ["prettier --write"]
   }
 }
