Added getById.spec.ts & getSorted.spec.ts for Customers

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,15 +14,9 @@
     // For nodejs:
     // "lib": ["esnext"],
     // "allowImportingTsExtensions": true,
-    "target": "ES2022",
-    "lib": [
-      "ES2022",
-      "DOM",
-      "DOM.Iterable"
-    ],
-    "types": [
-      "node"
-    ],
+    "target": "ES2023",
+    "lib": ["ES2023", "DOM", "DOM.Iterable"],
+    "types": ["node", "@playwright/test", "expect-playwright"],
     // Для ESM
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
@@ -49,8 +43,5 @@
     "moduleDetection": "force",
     "skipLibCheck": true
   },
-  "include": [
-    "src",
-    "playwright.config.ts"
-  ]
+  "include": ["src", "playwright.config.ts"]
 }
