--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/lodash": "^4.17.21",
     "@types/moment": "^2.13.0",
     "@types/node": "^24.6.2",
+    "ajv-formats": "^3.0.1",
     "allure-commandline": "^2.34.1",
     "allure-playwright": "^3.4.2",
     "eslint": "^9.39.1",
@@ -71,8 +72,15 @@
     "numeral": "^2.0.6"
   },
   "lint-staged": {
-    "*.{js,ts,jsx,tsx}": ["eslint --fix", "prettier --write"],
-    "*.json": ["prettier --parser json --write"],
-    "*.{md,yml,yaml,css,scss}": ["prettier --write"]
+    "*.{js,ts,jsx,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.json": [
+      "prettier --parser json --write"
+    ],
+    "*.{md,yml,yaml,css,scss}": [
+      "prettier --write"
+    ]
   }
 }
