--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "@types/jest": "^30.0.0",
     "@types/lodash": "^4.17.21",
     "@types/moment": "^2.13.0",
+    "@types/nock": "^11.1.0",
     "@types/node": "^24.6.2",
+    "ajv-formats": "^3.0.1",
     "allure-commandline": "^2.34.1",
     "allure-playwright": "^3.4.2",
     "eslint": "^9.39.1",
@@ -54,6 +56,7 @@
     "husky": "^9.1.7",
     "jest": "^30.2.0",
     "lint-staged": "^16.2.7",
+    "nock": "^14.0.10",
     "prettier": "^3.7.3",
     "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
