Minor fixes for Readme

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "lint-staged": "lint-staged",
     "precommit": "npm run lint-staged",
     "test": "npx playwright test",
-    "test:ui": "npx playwright test --ui"
+    "test:ui": "npx playwright test --ui",
+    "test:api": "npx playwright test src/tests/api"
   },
   "keywords": [],
   "author": "",
