added settings for ci & report

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@ node_modules
 /playwright/.cache/
 /playwright/.auth/
 .env
+.env.local
+.env.prod
 allure-results
 allure-report
 /src/.auth
+getChatId.js
