--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "typescript-eslint": "^8.45.0"
   },
   "dependencies": {
+    "@types/node-telegram-bot-api": "^0.64.13",
     "@types/numeral": "^2.0.5",
     "ajv": "^8.17.1",
     "bson": "^7.0.0",
@@ -71,11 +72,19 @@
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "mongodb": "^7.0.0",
+    "node-telegram-bot-api": "^0.66.0",
     "numeral": "^2.0.6"
   },
   "lint-staged": {
-    "*.{js,ts,jsx,tsx}": ["eslint --fix", "prettier --write"],
-    "*.json": ["prettier --parser json --write"],
-    "*.{md,yml,yaml,css,scss}": ["prettier --write"]
+    "*.{js,ts,jsx,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.json": [
+      "prettier --parser json --write"
+    ],
+    "*.{md,yml,yaml,css,scss}": [
+      "prettier --write"
+    ]
   }
 }
