--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -9,7 +9,7 @@ on:
   workflow_dispatch: # Manually trigger the workflow
 
 jobs:
-  test: 
+  test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
@@ -18,12 +18,12 @@ jobs:
         run: |
           if [[ "$GITHUB_EVENT_PATH" ]]; then
             COMMENT=$(jq -r .comment.body < "$GITHUB_EVENT_PATH")
-            if [[ "$COMMENT" != "run-tests" ]]; then
+            if [[ "$COMMENT" != "/run-tests" ]]; then
               echo "Комментарий не /run-tests, пропускаем workflow"
               exit 0
             fi
           fi
-    
+
       # Checkout
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
