--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -1,7 +1,8 @@
 name: Run Sales Portal API tests
 on:
-  issue_comment:
-    types: [created]
+  push:
+    branches:
+      - main
 
   schedule:
     - cron: '0 22 * * *' # 00:00 GMT+2 (22:00 UTC)
@@ -13,17 +14,6 @@ jobs:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
-      - name: Check trigger for PR comment
-        if: github.event_name == 'issue_comment'
-        run: |
-          if [[ "$GITHUB_EVENT_PATH" ]]; then
-            COMMENT=$(jq -r .comment.body < "$GITHUB_EVENT_PATH")
-            if [[ "$COMMENT" != "/run-tests" ]]; then
-              echo "Комментарий не /run-tests, пропускаем workflow"
-              exit 0
-            fi
-          fi
-
       # Checkout
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
