--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -5,7 +5,7 @@ on:
       - main
 
   schedule:
-    - cron: '0 22 * * *' # 00:00 GMT+2 (22:00 UTC)
+    - cron: "0 22 * * *" # 00:00 GMT+2 (22:00 UTC)
 
   workflow_dispatch: # Manually trigger the workflow
 
