--- a/.github/workflows/api_&_ui.yml
+++ b/.github/workflows/api_&_ui.yml
@@ -37,7 +37,7 @@ jobs:
           USER_PASSWORD: ${{ secrets.USER_PASSWORD }}
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-        run: npm run test:api
+        run: npm run test
         continue-on-error:
           true
 
